[gd_scene load_steps=6 format=3 uid="uid://bdu57maeod64a"]

[ext_resource type="Texture2D" uid="uid://bforb6rtg5gjc" path="res://assets/logo.png" id="1_45a1r"]
[ext_resource type="Script" uid="uid://deojkxd6xhb1v" path="res://scripts/index.gd" id="1_74d6c"]
[ext_resource type="Shader" uid="uid://dinq5u53uho04" path="res://shaders/image-border_radius.gdshader" id="1_igtc1"]
[ext_resource type="PackedScene" uid="uid://bf86xkd3r2706" path="res://scenes/language_button.tscn" id="4_hhnvu"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_74d6c"]
shader = ExtResource("1_igtc1")
shader_parameter/radius = 40.0

[node name="Control" type="Control"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 2
mouse_filter = 2
script = ExtResource("1_74d6c")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" parent="CanvasLayer" instance=ExtResource("4_hhnvu")]
offset_left = 25.0
offset_top = 23.0
offset_right = 225.0
offset_bottom = 54.0
mouse_filter = 1

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
layout_mode = 2
mouse_filter = 1

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 15

[node name="TextureRect" type="TextureRect" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
material = SubResource("ShaderMaterial_74d6c")
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
texture = ExtResource("1_45a1r")
expand_mode = 1
stretch_mode = 5

[node name="Control" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="RichTextLabel" type="RichTextLabel" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/Control"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
theme_override_font_sizes/bold_font_size = 25
bbcode_enabled = true
text = "WELCOME_BACK"
horizontal_alignment = 1

[node name="Label" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/Control"]
layout_mode = 2
text = "LOG_IN_TO_CONTINUE"
horizontal_alignment = 1

[node name="Error" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.6494943, 0.3318175, 0.317145, 1)
theme_override_font_sizes/font_size = 12
text = "Une erreur s'est produite"
horizontal_alignment = 1
autowrap_mode = 2

[node name="TabContainer" type="TabContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/tab_separation = 20
tab_alignment = 1
current_tab = 0

[node name="LOGIN" type="Control" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/TabContainer"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
mouse_filter = 1
metadata/_tab_index = 0

[node name="CenterContainer" type="MarginContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/TabContainer/LOGIN"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 13.5
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2

[node name="LoginForm" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/TabContainer/LOGIN/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="Email" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/TabContainer/LOGIN/CenterContainer/LoginForm"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/TabContainer/LOGIN/CenterContainer/LoginForm/Email"]
layout_mode = 2
text = "Email"

[node name="Input" type="LineEdit" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/TabContainer/LOGIN/CenterContainer/LoginForm/Email"]
custom_minimum_size = Vector2(250, 40)
layout_mode = 2

[node name="Password" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/TabContainer/LOGIN/CenterContainer/LoginForm"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/TabContainer/LOGIN/CenterContainer/LoginForm/Password"]
layout_mode = 2
text = "PASSWORD"

[node name="Input" type="LineEdit" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/TabContainer/LOGIN/CenterContainer/LoginForm/Password"]
custom_minimum_size = Vector2(250, 40)
layout_mode = 2

[node name="RememberMe" type="CheckBox" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/TabContainer/LOGIN/CenterContainer/LoginForm"]
layout_mode = 2
text = "REMEMBER_ME"

[node name="LoginButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/TabContainer/LOGIN/CenterContainer/LoginForm"]
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 1
theme_type_variation = &"base_button"
text = "LOGIN"

[node name="REGISTER" type="Control" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/TabContainer"]
visible = false
custom_minimum_size = Vector2(300, 450)
layout_mode = 2
mouse_filter = 1
metadata/_tab_index = 1

[node name="CenterContainer" type="MarginContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/TabContainer/REGISTER"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 13.5
offset_bottom = 27.5
grow_horizontal = 2
grow_vertical = 2

[node name="RegisterForm" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/TabContainer/REGISTER/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="Email" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/TabContainer/REGISTER/CenterContainer/RegisterForm"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/TabContainer/REGISTER/CenterContainer/RegisterForm/Email"]
layout_mode = 2
text = "Email"

[node name="Input" type="LineEdit" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/TabContainer/REGISTER/CenterContainer/RegisterForm/Email"]
custom_minimum_size = Vector2(250, 40)
layout_mode = 2

[node name="Username" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/TabContainer/REGISTER/CenterContainer/RegisterForm"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/TabContainer/REGISTER/CenterContainer/RegisterForm/Username"]
layout_mode = 2
text = "USERNAME"

[node name="Input" type="LineEdit" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/TabContainer/REGISTER/CenterContainer/RegisterForm/Username"]
custom_minimum_size = Vector2(250, 40)
layout_mode = 2

[node name="Password" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/TabContainer/REGISTER/CenterContainer/RegisterForm"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/TabContainer/REGISTER/CenterContainer/RegisterForm/Password"]
layout_mode = 2
text = "PASSWORD"

[node name="Input" type="LineEdit" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/TabContainer/REGISTER/CenterContainer/RegisterForm/Password"]
custom_minimum_size = Vector2(250, 40)
layout_mode = 2

[node name="PasswordConfirmation" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/TabContainer/REGISTER/CenterContainer/RegisterForm"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/TabContainer/REGISTER/CenterContainer/RegisterForm/PasswordConfirmation"]
layout_mode = 2
text = "PASSWORD_CONFIRMATION"

[node name="Input" type="LineEdit" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/TabContainer/REGISTER/CenterContainer/RegisterForm/PasswordConfirmation"]
custom_minimum_size = Vector2(250, 40)
layout_mode = 2

[node name="RegisterButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/TabContainer/REGISTER/CenterContainer/RegisterForm"]
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 1
theme_type_variation = &"base_button"
text = "SIGN_IN"

[connection signal="tab_changed" from="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/TabContainer" to="." method="_on_tab_container_tab_changed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/TabContainer/LOGIN/CenterContainer/LoginForm/LoginButton" to="." method="_on_login_button_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/TabContainer/REGISTER/CenterContainer/RegisterForm/RegisterButton" to="." method="_on_register_button_pressed"]
